--- a/test/spa-hash.html
+++ b/test/spa-hash.html
@@ -30,6 +30,13 @@
     <h2>Page: <span class="page-name"><%= name %></span></h2>
 </script>
 
+<script type="text/html" id="page-template">
+    <h2>Page: <span class="page-name"><%= name %></span></h2>
+
+    This template is used by many URIs.
+    <span class="page-parameter"><%= parameter %></span>
+</script>
+
 <script type="text/html" id="page-parameter">
     <h2>Parameter: <span class="page-parameter"><%= parameter %></span></h2>
 </script>
