--- a/test/spa-hash.html
+++ b/test/spa-hash.html
@@ -28,6 +28,8 @@
 
 <script type="text/html" id="page-first">
     <h2>Page: <span class="page-name"><%= name %></span></h2>
+
+    <span class="first-content"></span>
 </script>
 
 <script type="text/html" id="page-template">
