--- a/test/spa-hash.html
+++ b/test/spa-hash.html
@@ -24,6 +24,8 @@
 
 <script type="text/html" id="page-home">
     <h2>Page: <span class="page-name"><%= name %></span></h2>
+
+    <span class="home-content"></span>
 </script>
 
 <script type="text/html" id="page-first">
@@ -41,6 +43,12 @@
 
 <script type="text/html" id="page-parameter">
     <h2>Parameter: <span class="page-parameter"><%= parameter %></span></h2>
+</script>
+
+<script type="text/html" id="page-dynamic">
+    <h2>Dynamic page</h2>
+
+    <span class="dynamic-content"></span>
 </script>
 
 </body>
