--- a/test/spa-hash.html
+++ b/test/spa-hash.html
@@ -14,7 +14,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.3/backbone-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qunit/1.18.0/qunit.min.js"></script>
-    <script src="../dist/spa.js"></script>
+    <script src="../dist/viewport.js"></script>
     <script src="spa-hash.js"></script>
 </head>
 <body>
