--- a/test/viewport-hash.html
+++ b/test/viewport-hash.html
@@ -15,7 +15,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.3/backbone-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qunit/1.18.0/qunit.min.js"></script>
     <script src="../dist/viewport.js"></script>
-    <script src="spa-hash.js"></script>
+    <script src="viewport-hash.js"></script>
 </head>
 <body>
 
